// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Other > [GM-Team][国漫][吞噬星空][Swallowed Star][2021][149][AVC][GB][1080P] 1`] = `
{
  "episode": {
    "number": 149,
  },
  "fansub": {
    "name": "GM-Team",
  },
  "file": {
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "subtitles": "GB",
  "tags": [
    "国漫",
  ],
  "title": "吞噬星空",
  "titles": [
    "Swallowed Star",
  ],
  "year": 2021,
}
`;

exports[`Other > [SweetSub][鬼太郎誕生 咯咯咯之謎（真生版）][The Birth of Kitaro - The Mystery of GeGeGe (True Birth Edition)][Movie][BDRip][1080P][AVC 8bit][繁日雙語] 1`] = `
{
  "fansub": {
    "name": "SweetSub",
  },
  "file": {
    "video": {
      "resolution": "1080P",
      "term": "8bit",
    },
  },
  "language": "繁日雙語",
  "source": "BDRip",
  "tags": [],
  "title": "鬼太郎誕生 咯咯咯之謎（真生版）",
  "titles": [
    "The Birth of Kitaro - The Mystery of GeGeGe (True Birth Edition)",
  ],
  "type": "Movie",
}
`;

exports[`Other > [Up to 21°C] Love Live! Superstar!! 第三季 / Love Live! Superstar!! 3rd Season - 11 (ABEMA 1920x1080 AVC AAC MP4) 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "Up to 21°C",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "extension": "MP4",
    "video": {
      "resolution": "1920x1080",
      "term": "AVC",
    },
  },
  "platform": "ABEMA",
  "season": {
    "number": 3,
  },
  "tags": [],
  "title": "Love Live! Superstar!!",
}
`;

exports[`Other > [Up to 21°C] Shibuya♡Hachi Part 2 - 21 (ABEMA 1920x1080 AVC AAC MP4) 1`] = `
{
  "episode": {
    "number": 21,
  },
  "fansub": {
    "name": "Up to 21°C",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "extension": "MP4",
    "video": {
      "resolution": "1920x1080",
      "term": "AVC",
    },
  },
  "platform": "ABEMA",
  "tags": [],
  "title": "Shibuya♡Hachi Part 2",
}
`;

exports[`Other > [Up to 21°C] 最狂輔助職業【話術士】世界最強戰團聽我號令 / Saikyou no Shienshoku 'Wajutsushi' - 12 (CR 1920x1080 AVC AAC MKV) 1`] = `
{
  "episode": {
    "number": 12,
  },
  "fansub": {
    "name": "Up to 21°C",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "extension": "MKV",
    "video": {
      "resolution": "1920x1080",
      "term": "AVC",
    },
  },
  "platform": "CR",
  "tags": [],
  "title": "最狂輔助職業【話術士】世界最強戰團聽我號令",
  "titles": [
    "Saikyou no Shienshoku 'Wajutsushi'",
  ],
}
`;

exports[`Other > [jibaketa合成&音頻壓制][TVB粵語]閃躍吧！星夢☆頻道 / 美妙☆频道 / Kiratto Pri-chan - 140 [粵日雙語+內封繁體中文字幕][WEB 1920x1080 AVC AACx2 SRT TVB CHT] 1`] = `
{
  "episode": {
    "number": 140,
  },
  "fansub": {
    "name": "jibaketa合成&音頻壓制",
  },
  "file": {
    "audio": {
      "term": "AACx2",
    },
    "video": {
      "resolution": "1920x1080",
      "term": "AVC",
    },
  },
  "language": "粵語",
  "subtitles": undefined,
  "tags": [
    "WEB 1920x1080 AVC AACx2 SRT TVB CHT",
  ],
  "title": "閃躍吧！星夢☆頻道",
  "titles": [
    "美妙☆频道",
    "Kiratto Pri-chan",
  ],
}
`;

exports[`Other > [霜庭云花Sub][命运/奇异赝品 -黎明低语- / Fate/strange Fake -Whispers of Dawn-][00v2][1080P][AVC AAC][简体字幕][WebRip] 1`] = `
{
  "episode": {
    "number": 0,
  },
  "fansub": {
    "name": "霜庭云花Sub",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "简体",
  "source": "WebRip",
  "subtitles": undefined,
  "tags": [],
  "title": "命运",
  "titles": [
    "奇异赝品 -黎明低语-",
    "Fate",
    "strange Fake -Whispers of Dawn-",
  ],
  "version": 2,
}
`;

exports[`Other > 【FSD粉羽社】汪纷精彩光之美少女[45]\\美妙宠物 光之美少女\\Wonderful光之美少女\\わんだふるぷりきゅあ[中日双语]【Q娃\\precure】 1`] = `
{
  "episode": {
    "number": 45,
  },
  "fansub": {
    "name": "FSD粉羽社",
  },
  "language": "中日双语",
  "tags": [
    "Q娃\\precure",
  ],
  "title": "汪纷精彩光之美少女",
  "titles": [
    "美妙宠物 光之美少女",
    "Wonderful光之美少女",
    "わんだふるぷりきゅあ",
  ],
}
`;
